--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ workflows:
       - deploy-k8s:
           filters:
             branches:
-              only: [deploy]
+              only: [main]
       - deploy-app:
           requires: [build-docker-image]
           filters:
