--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,20 +60,17 @@ jobs:
       - run:
           name: Deploy app on K8S cluster
           command: |
-            # aws eks update-kubeconfig --region ap-southeast-1 --name udacity
+            aws eks update-kubeconfig --region ap-southeast-1 --name udacity-final-project
+            curl -o kubectl.sha256 https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl.sha256
+            chmod +x ./kubectl
+            mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+            echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
 
+            kubectl apply -f k8s/deploy.yml
             whoami
             ls -la
             which kubectl
-
             ls -la ~/.kube
-
-            # curl -o kubectl.sha256 https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl.sha256
-            # chmod +x ./kubectl
-            # mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-            # echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
-
-            # kubectl apply -f k8s/deploy.yml
 
 workflows:
   default:
