--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list
             apt-get update
             apt-get install -y kubectl
-            aws eks update-kubeconfig --region ap-southeast-1 --name udacity
+            aws eks update-kubeconfig --region ap-southeast-1 --name udacity-final-project
             # kubectl version
             kubectl apply -f k8s/deploy.yml
 
