--- a/k8s/deploy.yml
+++ b/k8s/deploy.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: udacity-final-project
-        image: duongtd/udacity-final-project
+        image: duongtd/udacity-final-project:v1
         ports:
         - containerPort: 8000
