--- a/k8s/deploy.yml
+++ b/k8s/deploy.yml
@@ -8,14 +8,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: udacity-final-project
+      app: udacity-final-project2
   template:
     metadata:
       labels:
-        app: udacity-final-project
+        app: udacity-final-project2
     spec:
       containers:
-      - name: udacity-final-project
-        image: duongtd/udacity-final-project:v1
+      - name: udacity-final-project2
+        image: duongtd/udacity-final-project2:v1
         ports:
         - containerPort: 8000
