--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,10 @@ jobs:
             aws eks update-kubeconfig --region ap-southeast-1 --name udacity-final-project2
             # kubectl version
             kubectl apply -f k8s/deploy.yml
+      - run:
+          name: publish app
+          command: |
+            kubectl apply -f k8s/service.yml
 
 workflows:
   default:
