--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
           name: publish app
           command: |
             kubectl apply -f k8s/service.yml
-            kubectl get kubectl get services
+            kubectl get svc
 
 workflows:
   default:
