--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -3,7 +3,9 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-      service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-type: external
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
   labels:
     app: udacity-final-project
   name: udacity-final-project
