--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ workflows:
       - deploy-k8s:
           filters:
             branches:
-              only: [main]
+              only: [mainx]
       - deploy-app:
           #requires: [deploy-k8s]
           filters:
